[gd_scene load_steps=7 format=3 uid="uid://c7enia63ekpbc"]

[ext_resource type="Script" uid="uid://g4khcaelye4" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://dbbhmtkfr1qg4" path="res://art/player/playerGrey_swim_1.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://comnuqut8xhff" path="res://art/player/playerGrey_swim_2.png" id="3_hqtel"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sweqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i3pqv")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqtel")
}],
"loop": true,
"name": &"swim",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2hs0m"]
radius = 57.0
height = 144.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3pqv"]
radius = 33.0
height = 110.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_4flbx")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sweqy")
animation = &"swim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_2hs0m")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
limit_left = -1920
limit_top = -540
limit_right = 1920
limit_bottom = 540
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_drag_margin = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShapeRight" type="CollisionShape2D" parent="Area2D"]
position = Vector2(42, -2)
shape = SubResource("CapsuleShape2D_i3pqv")

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-51, -2)
shape = SubResource("CapsuleShape2D_i3pqv")
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
